--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">honsenApp</string>
-
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">エール!JAPAN</string>
     <string name="action_settings">Settings</string>
+	<string name="title_activity_yell">YellActivity</string>
+
+	<string name="hello_world">Hello world!</string>
 </resources>
